backend ok menos avaliação do pagamento

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
     <main>
         <div class="produtos">
             <h2>Produtos</h2>
+            <div class="descricao">
+                <span>Nome</span>
+                <span>Preço</span>
+            </div>
             <div class="produto">
                 <span>Cerveja</span>
                 <span>R$8</span>
@@ -37,6 +41,11 @@
         </div>
         <div class="carrinho">
             <h2>Carrinho</h2>
+            <div class="descricao">
+                <span>Nome</span>
+                <span>Quantidade</span>
+                <span>Total</span>
+            </div>
             <div>
                 <div class="item">
                     <span class="nome">Cerveja</span>
