--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,8 @@
                     <span class="quantidade" id="qtd_vinho">0</span>
                     <span class="valor-total" id="val_vinho">R$0</span>
                 </div>
-                <input type="button" value="Finalizar compra" class="comprar" onclick=fazer_pedido()>
+                <div class="item" id="vazio">Você ainda não adicionou nenhum item!</div>
+                <input type="button" value="Enviar pedido" class="comprar" onclick=fazer_pedido()>
             </div>
         </div>
     </main>
